Fix realartists/shiphub-cocoa#79 Add comment field can get clipped

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -493,6 +493,7 @@ div.IssueLabels .LabelContainer {
 
 .CodeMirror {
   height: auto;
+  min-height: 28px;
   font-family: menlo, consolas, monaco, monospace;
   font-size: 9pt;
 }
